<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_login_screen"
        style="@style/title_large"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"

        android:fontFamily="@font/urbanist"

        android:text="@string/title_login_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subtitle_login_screen"
        android:text="@string/subtitle_login_screen"
        android:layout_marginTop="8dp"

        style="@style/body_large"

        app:layout_constraintStart_toStartOf="@+id/title_login_screen"
        app:layout_constraintTop_toBottomOf="@+id/title_login_screen" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_for_email_address"
        android:text="@string/email_address"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginTop="@dimen/spacing_xxl"

        style="@style/label_large"




        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_login_screen" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxStrokeColor="#C4C7CC"
        app:boxStrokeWidth="0.5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_for_email_address">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_email_address"
            android:textColorHint="@color/text_color_3"
            android:inputType="textEmailAddress"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_for_confirm_password"
        android:text="@string/password"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginTop="@dimen/spacing_sm"

        style="@style/label_large"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_container" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxStrokeColor="#C4C7CC"
        app:boxStrokeWidth="0.5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#898E99"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_for_confirm_password">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_password"
            android:textColorHint="@color/text_color_3"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="16"
            />



    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/remember_me"
        android:text="@string/remember_password"
        android:textColor="@color/text_color_2"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginTop="@dimen/spacing_sm"

        style="@style/body_medium"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#0079BD"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:lineHeight="24dp"
        android:fontFamily="@font/urbanist"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/remember_me"
        tools:layout_editor_absoluteX="101dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forget_password"
        android:text="@string/title_forget_password_screen"
        android:layout_marginEnd="16dp"
        android:textColor="@color/accent"

        style="@style/body_small"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/continue_with"
        android:fontFamily="@font/urbanist"
        android:lineHeight="20dp"
        android:textSize="14sp"
        android:textColor="#A8AEBE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_password" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="0.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/google_sign_in_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist"
                android:lineHeight="20dp"
                android:text="@string/continue_with_google"
                android:textColor="#40444D"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_tag_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:lineHeight="20dp"
            android:text="@string/do_not_have_an_account"
            android:textColor="#565B66"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_up_here"
            android:text="@string/sign_up_here"
            android:textColor="@color/accent"
            android:textStyle="bold"

            style="@style/body_medium"
            />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>