<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.ui.views.auth.forget_password.ForgetPasswordFragment"
    android:background="@color/white"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_login_screen"
        android:text="@string/title_forget_password_screen"

        style="@style/title_large"

        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginTop="@dimen/spacing_lg"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subtitle_login_screen"
        android:text="@string/subtitle_forget_password_screen"

        style="@style/body_large"

        android:layout_marginTop="@dimen/spacing_xxs"
        app:layout_constraintStart_toStartOf="@+id/title_login_screen"
        app:layout_constraintTop_toBottomOf="@+id/title_login_screen" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_for_new_password"
        android:text="@string/email_address"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginTop="@dimen/spacing_xxl"

        style="@style/label_large"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_login_screen" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxStrokeColor="#C4C7CC"
        app:boxStrokeWidth="0.5dp"


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_for_new_password">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_email_address"
            android:textColorHint="@color/text_label"
            android:inputType="textEmailAddress"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_code_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#0079BD"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:lineHeight="24dp"
        android:fontFamily="@font/urbanist"
        android:text="@string/send_code"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/email_container"
        tools:layout_editor_absoluteX="101dp" />




</androidx.constraintlayout.widget.ConstraintLayout>