<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.views.auth.ResetPasswordFragment"
    android:background="@color/white"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_login_screen"
        android:text="@string/reset_password"
        style="@style/title_large"

        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginTop="@dimen/spacing_lg"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subtitle_login_screen"
        android:text="@string/subtitle_reset_password_screen"
        android:layout_marginTop="@dimen/spacing_xxs"
        style="@style/body_large"


        app:layout_constraintStart_toStartOf="@+id/title_login_screen"
        app:layout_constraintTop_toBottomOf="@+id/title_login_screen" />


<!--    new password label-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_for_new_password"
        android:text="@string/new_password"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginTop="@dimen/spacing_xxl"

        style="@style/label_large"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_login_screen" />

<!--    new password text field-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_container"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxStrokeColor="#C4C7CC"
        app:boxStrokeWidth="0.5dp"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#898E99"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_for_new_password">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_new_password"
            android:textColorHint="@color/text_color_3"
            android:inputType="textPassword"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

<!--    confirm new password label-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_for_retype_password"
        android:text="@string/retype_new_password"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginTop="@dimen/spacing_sm"

        style="@style/label_large"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password_container" />

<!--    confirm new password text field-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_container"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxStrokeColor="#C4C7CC"
        app:boxStrokeWidth="0.5dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#898E99"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_for_retype_password">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_your_new_password"
            android:textColorHint="@color/text_color_3"
            android:inputType="textPassword"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_password_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#0079BD"
        android:fontFamily="@font/urbanist"
        android:lineHeight="24dp"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/white"

        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_container" />


</androidx.constraintlayout.widget.ConstraintLayout>